--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -80,6 +80,7 @@
     <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
     <script src="/js/form-wizard.js" defer></script>
     <script src="/js/form-validation.js" defer></script>
+    <script src="/js/address-reuse.js" defer></script>
     <script src="/js/websocket.js" defer></script>
 </body>
 </html>
